--- a/localisation/braz_por/MD_focus_IND_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_IND_l_braz_por.yml
@@ -168,19 +168,7 @@
  IND_maluku_crush_gangs_desc: "Ao eliminar as gangues remanescentes em nossas cidades, podemos finalmente respirar aliviados. Seus saques, assassinatos e destruição só trazem instabilidade para nossa nação!"
  IND_maluku_all_quiet_for_now: "Tudo calmo por enquanto.."
  IND_maluku_all_quiet_for_now_desc: "Parece que, devido aos nossos esforços mais rigorosos, a paz foi restaurada em muitas cidades. Esperamos que isso dure"
- IND_coexistence_effort: "Esforço de Coexistência"
- IND_coexistence_effort_desc: "Devemos ensinar nosso povo a viver juntos sem se despedaçar como selvagens, e devemos procurar rapidamente maneiras de fazer isso"
- IND_kemdikibud: "Estabelecer o Kemdikibud"
- IND_kemdikibud_desc: "Ao criar o Kemdikibud, podemos finalmente iniciar o processo de fazer nosso povo coexistir sem conflitos"
- IND_cultural_centers: "Estabelecer Centros Culturais"
- IND_cultural_centers_desc: "Concentrar nossos esforços na criação de novos centros culturais pode ajudar nosso povo a aprender mais uns sobre os outros, em vez de encontrar diferenças encontrarão semelhanças"
- IND_ministry_of_culture: "Fundos para o Kemdikibud"
- IND_ministry_of_culture_desc: "Ao fornecer maior financiamento ao Ministério da Educação e Cultura, podemos oferecer uma melhor educação aos nossos alunos sobre as muitas culturas na Indonésia!"
  IND_komnas_ham_desc: "Realizar a Conferência KOMNAS-HAM nos proporcionou uma plataforma melhor para ativistas dos direitos humanos e para as necessidades sociais do nosso povo"
- IND_garuntee_freedom: "Garantir Liberdades Individuais"
- IND_garuntee_freedom_desc: "Com a ajuda do KOMNNAS-HAM, agora estamos pressionando para proteger a liberdade do nosso povo"
- IND_one_nation_many_people: "Uma Nação, Muitas Pessoas Diferentes"
- IND_one_nation_many_people_desc: "Somos uma nação, com uma bandeira e, apesar de nossas diferenças culturais, estamos mais unidos do que nunca!"
  IND_indonesian_armed_forces: "As Forças Armadas da Indonésia"
  IND_indonesian_armed_forces_desc: "As Forças Armadas da Indonésia são uma das potências militares da Ásia. Desde nossas forças terrestres até nossos pilotos, os homens e mulheres da nação estão prontos para defender o país de todas as ameaças"
  IND_tni_ad: "TNI-AD"
@@ -927,8 +915,7 @@
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Modificar §YA Insurgência em Aceh§! por \nReganho de Organização: §G+10%§! \nVelocidade de Crescimento da Resistência: §G-5%§!\nConformidade: §G+5%§!\nMáx. Indústrias no Estado: §G+50%§!\nVelocidade das Divisões: §G+5%§! \n"
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "Modificar §YA Insurgência em Aceh§! por \nReganho de Organização: §G+2%§! \nVelocidade de Crescimento da Resistência: §G-5%§!\nConformidade §G+5%§!\nMáx. Indústrias no Estado: §G+15%§!\nVelocidade das Divisões: §G+20%§! \n"
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "Modificar §YA Insurgência em Aceh§! por \nReganho de Organização: §G+1%§! \nVelocidade de Crescimento da Resistência: §G-3%§!\nConformidade §G+2%§!\nMáx. Indústrias no Estado: §G+5%§!\n"
- IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§GRetirar A Insurgência em Aceh!§"
- IND_quiet_now: "§YRemoverá Tensões Étnicas ou Mediar Tensões Étnicas espírito nacional. Para completar este foco, você deve ter completado todas as decisões na aba, dependendo de qual lado você apoiou§"
+ IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§GRetirar A Insurgência em Aceh§!"
  IND_q: "Removerá §YTensões Étnicas§! or §TMediar Tensões Étnicas§! \n§RRequer que as Decisões Étnicas sejam concluídas§!"
  IND_sal_1: "Substituir §YCrescimento da Radicalização§! por §YNeutralização da Radicalização§! Mudança Eficaz: \nGanho Diário Salafista: §G-1%§! \nApoio à Guerra: §R-4%§!\nVelocidade de Pesquisa §G+1%§!"
  IND_sal_2: "Modificar §YNeutralização da Radicalização§! por \nGanho Diário Salafista: §G-1%§! \nApoio à Guerra: §R-4%§!"
@@ -944,8 +931,6 @@
  IND_soldier: "Cria §Y3 Unidades de Infantaria§! em Java Ocidental"
  IND_soldier2: "Cria §Y2 Unidades Mecanizadas§! em Java Ocidental"
  IND_soldier3: "Cria §Y2 Unidades de Forças Especiais§! em Java Ocidental"
- IND_est1: "Liberará §YTimor-Leste§! em alguns meses"
- IND_est2: "Pode levar a §RGuerra§! com Timor-Leste\n e a §Rpiores§! relações com o Ocidente!"
  indonesian_caliphate: "Califado Indonésio se Expande!"
  indonesia_confront_australia_threat: "Indonésia Ameaça a Austrália por Timor-Leste!"
  IND_our_policies_tt: "Devemos preencher §Y$IND_new_capital$§! ou §Y$IND_new_silkroad$§!"
