--- a/localisation/braz_por/MD_focus_USA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_USA_l_braz_por.yml
@@ -2747,7 +2747,7 @@
  econ_event.21.o1: "Taylor & Murphy Construction É Considerada Culpada"
  econ_event.21.o2: "Taylor & Murphy Construction É Considerada Não Culpada"
  econ_event.22.t: "Estados Unidos vs. Bluestar Metal Recycling Co."
- econ_event.22.d: "Começando pelo menos a partir de dezembro de 1993 e continuando pelo menos até outubro de 2001, as datas exatas sendo desconhecidas pelos Estados Unidos, o Réu e coconspiradores entraram em uma combinação e conspiração para suprimir e eliminar a concorrência ao alocar fornecedores na compra de sucata de metal ferroso e não ferroso no nordeste de Ohio. A combinação e conspiração acusada restringiu de forma irracional o comércio interestadual em violação à Seção 1 da Lei Antitruste Sherman (15 U.S.C. § 1)."
+ econ_event.22.d: "Começando pelo menos em dezembro de 1993 e continuando até pelo menos outubro de 2001, sendo as datas exatas desconhecidas para os Estados Unidos, o Réu e os co-conspiradores entraram e se envolveram em uma combinação e conspiração para suprimir e eliminar a concorrência alocando fornecedores na compra de sucata ferrosa e não ferrosa no nordeste de Ohio. A combinação e conspiração acusadas restringiram irracionalmente o comércio interestadual e o comércio em violação à Seção 1 do Sherman Antitrust Act (15 U.S.C. Assunto 1)."
  econ_event.22.o1: "Bluestar É Considerada Culpada"
  econ_event.22.o2: "Bluestar É Considerada Não Culpada"
  econ_event.23.t: "Estados Unidos vs. Duane Maynard"
