--- a/localisation/braz_por/MD_traits_l_braz_por.yml
+++ b/localisation/braz_por/MD_traits_l_braz_por.yml
@@ -479,3 +479,4 @@
  CAT_nuclear_reactors_research: "Velocidade de pesquisa de reatores nucleares"
  CAT_renewable_research: "Velocidade de Pesquisa em Tecnologia de Energia Renovável"
  CAT_fuel_oil_research: "Velocidade de Pesquisa de tecnologias de processamento de combustível e óleo"
+ CAT_industry_research: "Velocidade de Pesquisa da Indústria"
