--- a/localisation/braz_por/victory_points_l_braz_por.yml
+++ b/localisation/braz_por/victory_points_l_braz_por.yml
@@ -4322,35 +4322,35 @@
  VICTORY_POINTS_4287: "Fort Fairfield"
  VICTORY_POINTS_715: "Fitchburg"
  VICTORY_POINTS_14054: "Narragansett"
- VICTORY_POINTS_859: "Long Island"
+ VICTORY_POINTS_859: "Ilha Longa"
  VICTORY_POINTS_3894: "Washingtonville"
- VICTORY_POINTS_706: "Forestburgh"
+ VICTORY_POINTS_706: "Florestaburguês"
  VICTORY_POINTS_16104: "Harrisburg"
  VICTORY_POINTS_6848: "Fredericksburg"
- VICTORY_POINTS_4627: "Welch"
+ VICTORY_POINTS_4627: "Galês"
  VICTORY_POINTS_9825: "Cleveland"
  VICTORY_POINTS_15763: "Toledo"
  VICTORY_POINTS_659: "Mansfield"
  VICTORY_POINTS_15760: "Lima"
- VICTORY_POINTS_11890: "West Union"
+ VICTORY_POINTS_11890: "União Ocidental"
  VICTORY_POINTS_9760: "Chillicothe"
  VICTORY_POINTS_7528: "Chauncey"
- VICTORY_POINTS_15794: "Indianapolis"
+ VICTORY_POINTS_15794: "Indianápolis"
  VICTORY_POINTS_15746: "Lafayette"
  VICTORY_POINTS_15745: "Bloomington"
  VICTORY_POINTS_9653: "Muncie"
  VICTORY_POINTS_11621: "Santa Claus"
  VICTORY_POINTS_1881: "Crothersville"
- VICTORY_POINTS_11685: "Grand Rapids"
+ VICTORY_POINTS_11685: "Grandes Rapidas"
  VICTORY_POINTS_15703: "Lansing"
  VICTORY_POINTS_695: "Kalamazoo"
  VICTORY_POINTS_15702: "Ann Arbor"
  VICTORY_POINTS_15720: "Escanaba"
- VICTORY_POINTS_9746: "Bad Axe"
- VICTORY_POINTS_5205: "Stirlingville"
+ VICTORY_POINTS_9746: "Machado Ruim"
+ VICTORY_POINTS_5205: "Cidade de Stirling"
  VICTORY_POINTS_15734: "Bloomington"
  VICTORY_POINTS_15796: "Decatur"
- VICTORY_POINTS_15728: "Carrier Mills"
+ VICTORY_POINTS_15728: "Moinhos de transporte"
  VICTORY_POINTS_12368: "Oglesby"
  VICTORY_POINTS_9450: "Waukegan"
  VICTORY_POINTS_15740: "Naperville"
