--- a/localisation/french/MD_focus_TUR_l_french.yml
+++ b/localisation/french/MD_focus_TUR_l_french.yml
@@ -13,23 +13,23 @@
  TUR_PKK_autonomy_idea_desc: "Intégrer le PKK dans un autre pays sera presque impossible."
  TUR_traditional_ideals: "Idéaux traditionnels"
  TUR_traditional_ideals_desc: "Rejeter les idéaux et l’influence étrangers est la meilleure voie que notre nation puisse emprunter pour être libre et indépendante."
- TUR_archeology_cooperation: "Archeological Cooperation"
- TUR_archeology_cooperation_desc: "We are cooperating with other nations on excavating ancient treasures of the world"
+ TUR_archeology_cooperation: "Coopération archéologique"
+ TUR_archeology_cooperation_desc: "Nous coopérons avec d’autres nations pour l’excavation d’anciens trésors du monde"
  TUR_tubitak_idea_name: "TUBITAK"
- TUR_belgian_workers: "Belgian Scientists"
- TUR_tubitak_idea_name_desc: "We have flown out Belgian scientists to do the hard work of research and development for us."
- TUR_islamic_legacy2: "The Caliphates Legacy"
- TUR_islamic_legacy2_desc: "The Caliphate will have a very long history in our nation, and we must emphasize that. We will utilize it to our advantage for ideological purposes"
- TUR_mit_reform: "MIT Reforms"
- TUR_mit_reform_desc: "MIT has been reformed to keep track of activity within civilian life."
- TUR_tourism: "Influx of Tourism"
- TUR_tourism_desc: "We've had a lot of tourist coming into the country recently."
- TUR_mit_coop: "Cooperation with the MIT"
- TUR_mit_coop_desc: "MIT is now cooperating very closely with our armed forces, even keeping track of crucial documents and military information."
- TUR_new_armed_forces: "Reconditioned Armed Forces"
- TUR_new_armed_forces_desc: "Our military has been reconditioned and reborn following our sweeping reforms."
- TUR_airforce: "Air Contracts"
- TUR_airforce_desc: "We have signed contracts with several aircraft companies to provide us with better deals."
+ TUR_belgian_workers: "Scientifiques belges"
+ TUR_tubitak_idea_name_desc: "Nous avons fait venir des scientifiques belges pour effectuer pour nous le dur travail de recherche et de développement."
+ TUR_islamic_legacy2: "L'héritage des califats"
+ TUR_islamic_legacy2_desc: "Le Califat aura une très longue histoire dans notre nation, et nous devons le souligner. Nous l'utiliserons à notre avantage à des fins idéologiques."
+ TUR_mit_reform: "Réformes du MIT"
+ TUR_mit_reform_desc: "Le MIT a été réformé pour suivre les activités de la vie civile."
+ TUR_tourism: "Afflux de tourisme"
+ TUR_tourism_desc: "Nous avons eu beaucoup de touristes qui sont venus dans le pays récemment."
+ TUR_mit_coop: "Coopération avec le MIT"
+ TUR_mit_coop_desc: "Le MIT coopère désormais très étroitement avec nos forces armées, en gardant même la trace de documents cruciaux et d’informations militaires."
+ TUR_new_armed_forces: "Des forces armées réorganisées"
+ TUR_new_armed_forces_desc: "Notre armée a été reconditionnée et renaît suite à nos réformes radicales."
+ TUR_airforce: "Contrats aériens"
+ TUR_airforce_desc: "Nous avons signé des contrats avec plusieurs compagnies aériennes pour bénéficier de meilleures offres."
  TUR_naval_idea_name: "Turkish Navy"
  TUR_naval_idea_name_desc: "The Turkish Navy is tasked with providing Turkey hegemony in the oceans and territorial waters."
  TUR_alawite_mili_experience: "Alawite Military Experience"
@@ -1691,8 +1691,8 @@
  Turkey.8.desc: "No candidate managed to gather the required two-thirds vote in the first two rounds or the required majority in the third round. The contest has now been narrowed down to candidates from §W[socialism_L]§! and §W[Conservative_L]§!. It still is very unlikely that either candidate will win, making a snap election very likely. Of course, we can announce our support for the §W[Conservative_L]§! candidate. It is practically a political suicide, but at least it will buy us some time and spare us from an immediate election"
  Turkey.8.a: "Let's hope for the best. Again."
  Turkey.8.b: "Throw our weight behind the §W[Conservative_L]§! candiate"
- Turkey.9.t: "[Conservative_L] Candidate Wins Presidency"
- Turkey.9.desc: "With support from the ruling §W[socialism_L]§, the §W[Conservative_L]§! candidate Nevzat Yalçıntaş has won the presidential election. This will surely boost the popularity of §W[Conservative_L]§!"
+ Turkey.9.t: "[Conservative_L] Un candidat remporte la présidence"
+ Turkey.9.desc: "Avec le soutien du parti au pouvoir §W[socialism_L]§!, le candidat §W[Conservative_L]§! Nevzat Yalçıntaş a remporté l'élection présidentielle. Cela va certainement renforcer la popularité du parti §W[Conservative_L]§!"
  Turkey.9.a: "Excellent"
  Turkey.10.t: "Constitution Calls for Snap Elections"
  Turkey.10.desc: "It seems that no candidate has gathered enough support to win the office of President. The Turkish constitution requires that in such a state a snap election must be held to break the deadlock.\n\nThe new parliament will elect a new President successfully"
