--- a/localisation/french/MD_focus_UKR_l_french.yml
+++ b/localisation/french/MD_focus_UKR_l_french.yml
@@ -596,8 +596,8 @@
  UKR_increase_health_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_decrease_health: "Request Less Funding for Healthcare"
  UKR_decrease_health_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
- UKR_pension_open: "Start the §nPension§! Debate"
- UKR_pension_close: "End the §nPension§! Debate"
+ UKR_pension_open: "Lancez le débat sur la §OPension§!"
+ UKR_pension_close: "Mettre fin au débat sur les §OPension§!"
  UKR_increase_pension: "Request More Pension Spending"
  UKR_increase_pension_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_decrease_pension: "Request Less Pension Spending"
@@ -1435,8 +1435,8 @@
  UKR_regions_integr_desc: "We will form a coalition with this party, it will strengthen our political capabilities"
  UKR_socialist_ukraine_effort: "Socialist Reforms"
  UKR_socialist_ukraine_effort_desc: "We will begin a series of reforms that should strengthen our political position"
- UKR_pensions_for_elders_incr: "Increase Pensions"
- UKR_pensions_for_elders_incr_desc: "We will increase pension payments so that citizens are willing to retire"
+ UKR_pensions_for_elders_incr: "Augmenter les pensions"
+ UKR_pensions_for_elders_incr_desc: "Nous augmenterons les pensions de retraite pour que les citoyens soient prêts à prendre leur retraite"
  UKR_full_rabota: "Labor Reforms"
  UKR_full_rabota_desc: "We will carry out serious reforms in the labor legislation to improve the working conditions of our citizens"
  UKR_socialist_democratic_policies: "Social Democratic Country"
