--- a/localisation/french/MD_middle_east_content_l_french.yml
+++ b/localisation/french/MD_middle_east_content_l_french.yml
@@ -855,7 +855,7 @@
  SAU.1.d: "La visite de [LEB.GetLeader], Premier ministre du Liban, à [SAU.GetNameDef] a été interrompue aujourd'hui par une étrange déclaration de sa part selon laquelle il démissionnait en raison de l'influence croissante de l'Iran et du Hezbollah dans la politique libanaise. Le président libanais, parmi d'autres personnalités politiques du pays, a accusé [SAU.GetNameDef] d'avoir kidnappé le Premier ministre et de l'avoir contraint à publier cette déclaration et à présenter sa démission. Par la suite, la démission de [LEB.GetLeader] n'a pas été reconnue par son propre gouvernement.\n\nCette tournure des événements a coïncidé avec un discours belliqueux de [SAU.GetAdjective] à l'égard du Hezbollah, le ministre des Affaires étrangères de [SAU.GetAdjective] accusant le Hezbollah de mener des activités hostiles contre [SAU.GetNameDef]. Cela fait également suite à plusieurs mois de tensions croissantes entre [SAU.GetNameDef] et [PER.GetNameDef], et est largement considéré comme une réaction de [SAU.GetAdjective] à l'influence croissante de [PER.GetNameDef] au Moyen-Orient."
  SAU.1.a: "Une évolution dramatique."
  SAU_2017_Riyadh_Summit.0.t: "Sommet de Riyad de 2017"
- SAU_Riyadh_Summit_tt: "§GAugmentation de l'opinion entre tous les pays musulmans§"
+ SAU_Riyadh_Summit_tt: "§GAugmentation de l'opinion entre tous les pays musulmans§!"
  SAU_2017_Riyadh_Summit.0.d: "Le sommet de Riyad de 2017 est une série de trois sommets organisés les 20 et 21 mai 2017 à l'occasion de la visite du président américain Donald Trump en Arabie saoudite, son premier voyage à l'étranger."
  SAU_2017_Riyadh_Summit.0.a: "Accueillons-le."
  SAU_2017_Riyadh_Summit.0.b: "Pas besoin."
