--- a/localisation/french/MD_traits_l_french.yml
+++ b/localisation/french/MD_traits_l_french.yml
@@ -479,3 +479,4 @@
  CAT_nuclear_reactors_research: "Vitesse de recherche sur les réacteurs nucléaires"
  CAT_renewable_research: "Vitesse de recherche sur les technologies d'énergie renouvelable"
  CAT_fuel_oil_research: "Vitesse de recherche sur les technologies de traitement du carburant et du pétrole"
+ CAT_industry_research: "Vitesse de recherche industrielle"
