--- a/localisation/polish/MD_focus_IND_l_polish.yml
+++ b/localisation/polish/MD_focus_IND_l_polish.yml
@@ -168,19 +168,7 @@
  IND_maluku_crush_gangs_desc: "Miażdżąc pozostałe gangi w naszych miastach, możemy w końcu złapać oddech. Ich grabieże, zabijanie i niszczenie przynoszą naszemu narodowi jedynie niestabilność!"
  IND_maluku_all_quiet_for_now: "Na razie cisza.."
  IND_maluku_all_quiet_for_now_desc: "Wygląda na to, że dzięki naszym bardziej rygorystycznym wysiłkom w wielu miastach przywrócono spokój. Miejmy nadzieję, że to potrwa"
- IND_coexistence_effort: "Wysiłek współistnienia"
- IND_coexistence_effort_desc: "Musimy nauczyć naszych ludzi żyć razem, nie rozrywając się na kawałki jak dzicy, i musimy szybko znaleźć sposoby, aby to zrobić"
- IND_kemdikibud: "Załóż Kemdikibud"
- IND_kemdikibud_desc: "Tworząc Kemdikibud, możemy w końcu rozpocząć proces zapewnienia naszym ludziom współistnienia bez konfliktów"
- IND_cultural_centers: "Tworzyć Ośrodki Kultury"
- IND_cultural_centers_desc: "Włożenie naszych wysiłków w tworzenie nowych Centrów Kultury może pomóc naszym ludziom dowiedzieć się więcej o sobie nawzajem i zamiast znajdować różnice, znajdą podobieństwa"
- IND_ministry_of_culture: "Fundusze dla Kemdikibudu"
- IND_ministry_of_culture_desc: "Zapewniając większe fundusze Ministerstwu Edukacji i Kultury, możemy zapewnić naszym uczniom lepszą edukację na temat wielu kultur Indonezji!"
  IND_komnas_ham_desc: "Organizacja konferencji KOMNAS-HAM pozwoliła nam zapewnić lepszą platformę dla działaczy na rzecz praw człowieka i potrzeb społecznych naszych obywateli"
- IND_garuntee_freedom: "Gwarancja wolności jednostki"
- IND_garuntee_freedom_desc: "Z pomocą KOMNNAS-HAM staramy się teraz chronić wolność naszych narodów"
- IND_one_nation_many_people: "Jeden naród, wielu różnych ludzi"
- IND_one_nation_many_people_desc: "Jesteśmy jednym narodem, z jedną flagą i pomimo różnic kulturowych jesteśmy zjednoczeni bardziej niż kiedykolwiek!"
  IND_indonesian_armed_forces: "Siły Zbrojne Indonezji"
  IND_indonesian_armed_forces_desc: "Siły Zbrojne Indonezji to jedna z potęg militarnych Azji. Od naszych sił lądowych po naszych pilotów, mężczyźni i kobiety są gotowi bronić narodu przed wszelkimi zagrożeniami"
  IND_tni_ad: "TNI-AD"
@@ -927,8 +915,7 @@
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Zmodyfikuj §YPowstanie w Acehu§! przez \nOrganizacja Odzyskaj: §G+10%§! \nSzybkość wzrostu oporu: §G-5%§!\nZgodność: §G+5%§!\nMaksymalna liczba branż w stanie: §G+50%§!\nSzybkość dywizji: §G+5%§! \N"
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "Zmodyfikuj §YPowstanie w Acehu§! przez \nOrganizacja Odzyskaj: §G+2%§! \nSzybkość wzrostu oporu: §G-5%§!\nZgodność §G+5%§!\nMaksymalna liczba branż w stanie: §G+15%§!\nSzybkość dywizji: §G+20%§! \N"
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "Zmodyfikuj §YPowstanie w Acehu§! przez \nOrganizacja Odzyskaj: §G+1%§! \nSzybkość wzrostu oporu: §G-3%§!\nZgodność §G+2%§!\nMaksymalna liczba branż w stanie: §G+5%§!\n"
- IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§Usunąć Powstanie w Acehu!§"
- IND_quiet_now: "§YUsunie napięcia etniczne lub pośredniczy w duchu narodowym w napięciach etnicznych. Aby ukończyć to skupienie, musisz podjąć wszystkie decyzje w zakładce, w zależności od tego, którą stronę poparłeś§"
+ IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§GUsunąć Powstanie w Acehu§!"
  IND_q: "Usunie §YNapięcia etniczne§! lub §YMistrowanie napięć etnicznych§! \n§RWymaga podjęcia decyzji etnicznych§!"
  IND_sal_1: "Zastąp §YRosnąca radykalizacja§! z §YMiażdżącą radykalizacją§! Efektywna zmiana: \nDzienny zysk salaficki: §G-1%§! \nWsparcie wojenne: §R-4%§!\nSzybkość badań §G+1%§!"
  IND_sal_2: "Zmodyfikuj §YKruszenie radykalizacji§! przez \nDzienny zysk salaficki: §G-1%§! \nWsparcie wojenne: §R-4%§!"
@@ -944,8 +931,6 @@
  IND_soldier: "Tworzy §Y3 Jednostki Piechoty§! W zachodniej Jawie"
  IND_soldier2: "Tworzy §Y2 Jednostki Zmechanizowane§! W zachodniej Jawie"
  IND_soldier3: "Tworzy §Y2 Jednostki Sił Specjalnych§! W zachodniej Jawie"
- IND_est1: "Uwolni §YTimor-Leste§! Za kilka miesięcy"
- IND_est2: "Może prowadzić do §RWar§! z Timorem Wschodnim\n i §RWgorszym§! stosunki z Zachodem!"
  indonesian_caliphate: "Indonezyjski kalifat się rozwija!"
  indonesia_confront_australia_threat: "Indonezja grozi Australii w sprawie Timoru Wschodniego!"
  IND_our_policies_tt: "Musimy ukończyć §Y$IND_new_capital$§! lub §Y$IND_new_silkroad$§!"
