--- a/localisation/polish/MD_focus_UKR_l_polish.yml
+++ b/localisation/polish/MD_focus_UKR_l_polish.yml
@@ -596,8 +596,8 @@
  UKR_increase_health_desc: "Jeżeli debata w Radzie Najwyższej zakończy się §Gpowodzeniem§!, ustawa zostanie §Yzmieniona§!"
  UKR_decrease_health: "Poproś o mniejsze fundusze na opiekę zdrowotną"
  UKR_decrease_health_desc: "Jeżeli debata w Radzie Najwyższej zakończy się §Gpowodzeniem§!, ustawa zostanie §Yzmieniona§!"
- UKR_pension_open: "Uruchom §nPension§! Debata"
- UKR_pension_close: "Zakończ §nEmeryturę§! Debata"
+ UKR_pension_open: "Uruchom §OPension§! Debata"
+ UKR_pension_close: "Zakończ §OEmeryturę§! Debata"
  UKR_increase_pension: "Poproś o większe wydatki na emeryturę"
  UKR_increase_pension_desc: "Jeżeli debata w Radzie Najwyższej zakończy się §Gpowodzeniem§!, ustawa zostanie §Yzmieniona§!"
  UKR_decrease_pension: "Poproś o mniejsze wydatki na emeryturę"
