--- a/localisation/polish/MD_techs_l_polish.yml
+++ b/localisation/polish/MD_techs_l_polish.yml
@@ -2979,21 +2979,21 @@
  com_satellites: "Satelity telekomunikacyjne"
  com_satellites_desc: "Satelity telekomunikacyjne"
  COMSAT1: "KOMSAT 1965"
- COMSAT1_desc: "Satelita komunikacyjny (COMSAT 1965):\nThe §Y$COMSAT1$§! satelita to satelita komunikacyjny o przepustowości §Y56 kbit/s§!. Są one wymagane w przypadku §_satelitarnego systemu komunikacji o szybkości 156 kbitów/s§!."
+ COMSAT1_desc: "Satelita komunikacyjny (COMSAT 1965):\nThe §Y$COMSAT1$§! satelita to satelita komunikacyjny o przepustowości §Y56 kbit/s§!. Są one wymagane w przypadku §Ysatelitarnego systemu komunikacji o szybkości 56 kbitów/s§!."
  COMSAT2: "KOMSAT 1975"
  COMSAT2_desc: "Satelita komunikacyjny (COMSAT 1975):\nSatelita §Y$COMSAT2$§! jest satelitą komunikacyjnym o przepustowości §Y128 kbits/s§!. Są one wymagane do satelitarnego systemu komunikacyjnego o przepustowości §Y128 kbits/s§!."
  COMSAT3: "KOMSAT 1985"
  COMSAT3_desc: "Satelita komunikacyjny (COMSAT 1985):\nThe §Y$COMSAT3$§! satelita to satelita komunikacyjny o przepustowości §Y1 Mbit/s§!. Są one wymagane w przypadku §Y1 satelitarnego systemu komunikacyjnego Mbit/s§!."
  COMSAT4: "KOMSAT 1995"
- COMSAT4_desc: "Satelita komunikacyjny (COMSAT 1995):\nThe §Y$COMSAT4$§! satelita to satelita komunikacyjny o przepustowości §Y10 Mbit/s§!. Są one wymagane w przypadku §_satelitarnego systemu komunikacji 110 Mbit/s§!."
+ COMSAT4_desc: "Satelita komunikacyjny (COMSAT 1995):\nThe §Y$COMSAT4$§! satelita to satelita komunikacyjny o przepustowości §Y10 Mbit/s§!. Są one wymagane w przypadku §Ysatelitarnego systemu komunikacji 10 Mbit/s§!."
  COMSAT5: "KOMASAT 2005"
- COMSAT5_desc: "Satelita komunikacyjny (COMSAT 2005):\nThe §Y$COMSAT5$§! satelita to satelita komunikacyjny o przepustowości §Y128 Mbit/s§!. Są one wymagane w przypadku §_satelitarnego systemu komunikacji 1128 Mbit/s§!."
+ COMSAT5_desc: "Satelita komunikacyjny (COMSAT 2005):\nThe §Y$COMSAT5$§! satelita to satelita komunikacyjny o przepustowości §Y128 Mbit/s§!. Są one wymagane w przypadku §Ysatelitarnego systemu komunikacji 128 Mbit/s§!."
  COMSAT6: "KOMASAT 2015"
- COMSAT6_desc: "Satelita komunikacyjny (COMSAT 2015):\nThe §Y$COMSAT6$§! satelita to satelita komunikacyjny o przepustowości §Y512 Mbit/s§!. Są one wymagane w przypadku §_satelitarnego systemu komunikacji 1512 Mbit/s§!."
+ COMSAT6_desc: "Satelita komunikacyjny (COMSAT 2015):\nThe §Y$COMSAT6$§! satelita to satelita komunikacyjny o przepustowości §Y512 Mbit/s§!. Są one wymagane w przypadku §Ysatelitarnego systemu komunikacji 512 Mbit/s§!."
  COMSAT7: "KOMSAT 2025"
  COMSAT7_desc: "Satelita komunikacyjny (COMSAT 2025):\nThe §Y$COMSAT7$§! satelita to satelita komunikacyjny o przepustowości §Y1 Gbit/s§!. Są one wymagane w przypadku §Y1 satelitarnego systemu komunikacyjnego Gbit/s§!."
  COMSAT8: "KOMSAT 2035"
- COMSAT8_desc: "Satelita komunikacyjny (COMSAT 2035):\nThe §Y$COMSAT8$§! satelita to satelita komunikacyjny o przepustowości §Y10 Gbit/s§!. Są one wymagane w przypadku §_satelitarnego systemu komunikacji 110 Gbit/s§!."
+ COMSAT8_desc: "Satelita komunikacyjny (COMSAT 2035):\nThe §Y$COMSAT8$§! satelita to satelita komunikacyjny o przepustowości §Y10 Gbit/s§!. Są one wymagane w przypadku §Ysatelitarnego systemu komunikacji 10 Gbit/s§!."
  recon_satellites: "Satelity rozpoznawcze"
  recon_satellites_desc: "Satelity rozpoznawcze"
  SPYSAT1: "SPYSAT 1965"
