--- a/localisation/polish/MD_traits_l_polish.yml
+++ b/localisation/polish/MD_traits_l_polish.yml
@@ -479,3 +479,4 @@
  CAT_nuclear_reactors_research: "Szybkość badań reaktorów jądrowych"
  CAT_renewable_research: "Prędkość badań nad technologią energii odnawialnej"
  CAT_fuel_oil_research: "Prędkość badania nad technikami przetwarzania paliw i oleju"
+ CAT_industry_research: "Szybkość badań przemysłowych"
