--- a/localisation/russian/MD_focus_CHI_l_russian.yml
+++ b/localisation/russian/MD_focus_CHI_l_russian.yml
@@ -1185,7 +1185,7 @@
  china_news.18.d: "После более чем полувекового терпения Китай решил не мириться с предательством Ялтинской конференции и силой захватить регион Внешней Монголии. Надежды на будущее улан-баторского правительства в далекой Внутренней Азии мало. Как будут развиваться события, никто не знает."
  china_news.18.a: "Что внешнее?"
  china_news.19.t: "Создан специальный административный район Внешняя Монголия"
- china_news.19.d: "После положительной реакции в регионе Халха на недавние либерализации, руководство Монголии решило заменить статус Внешней Монголии \"нация\" на статус \"специальный административный район\". Это изменение статуса сопровождается значительной степенью воссоединения."
+ china_news.19.d: "После недавних шагов по углублению дружбы между Внешней Монголией и Материком, и поняв, что она не может существовать без поддержки Материка, для лучшего развития своего потенциала, руководство Монголии приняло решение заменить статус «Нации» Внешней Монголии на статус «Особого административного района». Это изменение статуса сопровождается большой степенью воссоединения."
  china_news.19.a: "Китай возвращает себе свои части."
  china_news.20.t: "Китай отказывается от поддержки независимости Тайваня"
  china_news.20.d: "Ознаменовав резкое изменение политики, [CHI.GetLeader] заявил журналистам, что если Китайская Республика, неофициально известная как Тайвань, будет стремиться к независимости, \"мы не встанем на их пути\". В прошлом Китай резко выступал против перспективы независимости Тайваня, даже угрожая применить силу для её предотвращения. Причины такого изменения позиции китайских властей остаются неясными."
