--- a/localisation/russian/MD_focus_TUR_l_russian.yml
+++ b/localisation/russian/MD_focus_TUR_l_russian.yml
@@ -1692,7 +1692,7 @@
  Turkey.8.a: "Будем надеяться на лучшее. Еще раз."
  Turkey.8.b: "Бросаем все силы на §W[Conservative_L]§! кандидат"
  Turkey.9.t: "[Conservative_L] Кандидат в президенты"
- Turkey.9.desc: "При поддержке правящей §W[socialism_L]§, §W[Conservative_L]§! Кандидат Невзат Ялчынташ одержал победу на президентских выборах. Это, несомненно, повысит популярность §W[Conservative_L]§!"
+ Turkey.9.desc: "При поддержке правящей §W[socialism_L]§!, §W[Conservative_L]§! Кандидат Невзат Ялчынташ одержал победу на президентских выборах. Это, несомненно, повысит популярность §W[Conservative_L]§!"
  Turkey.9.a: "Превосходно"
  Turkey.10.t: "Конституция требует проведения внеочередных выборов"
  Turkey.10.desc: "Похоже, что ни один из кандидатов не набрал достаточной поддержки, чтобы занять пост президента. Согласно турецкой конституции, в такой ситуации для выхода из тупика должны быть проведены внеочередные выборы.\n\nПарламент страны успешно изберет нового президента."
