--- a/localisation/russian/MD_focus_UKR_l_russian.yml
+++ b/localisation/russian/MD_focus_UKR_l_russian.yml
@@ -596,8 +596,8 @@
  UKR_increase_health_desc: "Если дебаты в Верховной Раде будут §Gуспешными§!, закон будет §Yизменен§!"
  UKR_decrease_health: "Запросить уменьшить финансирование на здравоохранение"
  UKR_decrease_health_desc: "Если дебаты в Верховной Раде будут §Gуспешными§!, закон будет §Yизменен§!"
- UKR_pension_open: "Начать дебаты о расходах на §nпенсии§!"
- UKR_pension_close: "Закончить дебаты о расходах на §nпенсии§!"
+ UKR_pension_open: "Начать дебаты о расходах на §Oпенсии§!"
+ UKR_pension_close: "Закончить дебаты о расходах на §Oпенсии§!"
  UKR_increase_pension: "Запросить увеличение расходов на пенсии"
  UKR_increase_pension_desc: "Если дебаты в Верховной Раде будут §Gуспешными§!, закон будет §Yизменен§!"
  UKR_decrease_pension: "Запросить уменьшить расходы на пенсии"
@@ -2447,7 +2447,7 @@
  UKR_delta_desc: "Украинская система информационной поддержки принятия решений и осведомленности об обстановке на поле боя имеет доступ к программе для действующих военнослужащих, прошедших проверку. Вход осуществляется через Интернет посредством авторизации и двухфакторной аутентификации на специальном сайте. Авторизованные пользователи могут просматривать и вводить данные об известных позициях противника, обнаруженных самолетах противника, наземной технике и т. д."
  UKR_oplit: "Государственный научно-исследовательский и конструкторский центр судостроения"
  UKR_oplit_desc: "Т-84 — украинский основной боевой танк, созданный на основе советского ОБТ Т-80, представленного в 1976 году, а именно версии с дизельным двигателем: Т-80УД. Т-84 был впервые построен в 1994 году и поступил на вооружение ВСУ в 1999 году. Высокопроизводительный оппозитный двигатель делает его быстрым танком, сравнимым с другими современными ОБТ с удельной мощностью около 26. лошадиных сил на тонну"
- UKR_sapsan: "Хрим-2"
+ UKR_sapsan: "Гром-2"
  UKR_sapsan_desc: "Украинский баллистический ракетный комплекс малой дальности, разрабатываемый КБ \"Южное\" и ПО \"Южмаш\", призван сочетать в себе характеристики тактического ракетного комплекса и системы залпового огня. Первоначальная версия ракеты «Сапсан» для нужд Украины должна была иметь дальность действия 500 километров. предел, установленный Режимом контроля за ракетными технологиями, который направлен на ограничение распространения ракет и ракетных технологий."
  UKR_zelya_helsi: "Хелси"
  UKR_zelya_dia: "Dia"
