--- a/localisation/russian/MD_middle_east_content_l_russian.yml
+++ b/localisation/russian/MD_middle_east_content_l_russian.yml
@@ -855,7 +855,7 @@
  SAU.1.d: "Визит [LEB.GetLeader], премьер-министра Ливана, в [SAU.GetNameDef] был прерван сегодня его странным заявлением о том, что он уходит в отставку из-за растущего влияния Ирана и Хезболлы в ливанской политике. Президент Ливана, а также другие политические деятели страны обвинили [SAU.GetNameDef] в похищении премьер-министра и принуждении его выступить с заявлением и подать в отставку. Впоследствии отставка [LEB.GetLeader] не была признана его собственным правительством.\n\nТакой поворот событий совпал с воинственными высказываниями [SAU.GetAdjective] представителей в адрес «Хезболлы», когда [SAU.GetAdjective] министр иностранных дел обвинил «Хезболлу» в ведении враждебной деятельности против [SAU.GetNameDef]. Он также последовал за несколькими месяцами растущей напряженности между [SAU.GetNameDef] и [PER.GetNameDef], и широко рассматривается как [SAU.GetAdjective] реакция на растущее [PER.GetNameDef] влияние на Ближнем Востоке."
  SAU.1.a: "Драматические события."
  SAU_2017_Riyadh_Summit.0.t: "Саммит в Эр-Рияде в 2017 году"
- SAU_Riyadh_Summit_tt: "§GУсиление мнения между всеми мусульманскими странами§"
+ SAU_Riyadh_Summit_tt: "§GIncreased Opinion Between All Muslim Countries§!"
  SAU_2017_Riyadh_Summit.0.d: "Эр-Риядский саммит 2017 года - это серия из трех саммитов, проведенных 20-21 мая 2017 года по случаю визита президента США Дональда Трампа в Саудовскую Аравию, его первого зарубежного визита."
  SAU_2017_Riyadh_Summit.0.a: "Принять гостей"
  SAU_2017_Riyadh_Summit.0.b: "Нет необходимости"
