--- a/localisation/russian/MD_traits_l_russian.yml
+++ b/localisation/russian/MD_traits_l_russian.yml
@@ -479,3 +479,4 @@
  CAT_nuclear_reactors_research: "Скорость исследования ядерных реакторов"
  CAT_renewable_research: "Скорость исследования технологий возобновляемой энергии"
  CAT_fuel_oil_research: "Скорость исследования технологий переработки топлива и нефти"
+ CAT_industry_research: "Скорость отраслевых исследований"
