--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -904,7 +904,7 @@
  china.24.a: "我们应该接受他们的要求。"
  china.24.b: "忠诚不绝对就是绝对不忠诚！"
  china.25.t: "台湾特别行政区成立"
- china.25.d: "经过半个世纪的争端和冲突，台海两岸终于实现和平统一。台湾，即前国民党政府，结束了敌对状态，并作为一个特别行政区加入了中华人民共和国。"
+ china.25.d: "经过半个世纪的争端和冲突，台海两岸终于实现和平统一。台湾，即前国民政府，结束了敌对状态，并作为一个特别行政区加入了中华人民共和国。"
  china.25.a: "一个重大进步。"
  china.26.t: "中国消灭前国民政府"
  china.26.d: "当源源不断的部队登陆淡水河口时，解放军先头部队席卷了台北。这座岛不再是一个躲藏的地方。决定性的时刻已经到来，长达半个世纪的内战终于结束了。"
@@ -1408,7 +1408,7 @@
  china_news.18.d: "经过半个多世纪的隐忍，中国决定不再容忍雅尔塔会议上的背叛，将使用武力收回外蒙古地区。处于遥远内亚地区的乌兰巴托政府的未来几乎没有希望。事情会如何发展，没有人知道。"
  china_news.18.a: "外什么？"
  china_news.19.t: "外蒙古特别行政区成立"
- china_news.19.d: "经过了最近一段时间的外蒙古与内地之间深化友谊举动之后，在意识到自身无法脱离内地的支持继续存在之后，蒙古领导人决定用“特别行政区”取代外蒙古的“国家”地位。这种地位的变化伴随着很大程度的统一。"
+ china_news.19.d: "经过了最近一段时间的外蒙古与内地之间深化友谊举动之后，在意识到自身无法脱离内地的支持继续存在之后，为了进一步开发自身潜力，蒙古领导人决定用“特别行政区”取代外蒙古的“国家”地位。这种地位的变化伴随着很大程度的统一。"
  china_news.19.a: "中国正在重拾昔日的碎片。"
  china_news.20.t: "中国放弃反对台湾独立立场"
  china_news.20.d: "[CHI.GetLeader]告诉记者，如果中华民国（非正式名称为台湾）寻求独立，“我们不会阻止他们”，这标志着政策的巨大变化。过去，中国曾强烈反对台独的前景，甚至威胁使用武力阻止。中国当局改变主意的原因仍不清楚。"
@@ -1425,7 +1425,7 @@
  china_news.23.d: "随着台湾海峡危机的进一步升级，中国向金门与马祖群岛的军事设施发射了炮弹，引发了[TAI.GetLeader]和[USA.Getleader]的愤怒反应。后者对中国发出强烈警告，承诺在中国入侵时美国将迅速采取行动。\n\n据报道，台湾军队已开始动员，为进一步升级做准备，政府也已开始撤离台湾外围岛屿。"
  china_news.23.a: "战争要来了"
  china_news.24.t: "台湾特别行政区成立"
- china_news.24.d: "随着中国大陆与台湾关系逐步改善，[TAI.GetLeader]政府同意重新加入大陆作为特别行政区，以换取保留台湾的政治和法律自治权。支持统一的泛蓝联盟的政治家发表声明，称赞此举是台湾历史上新的、更好的部分的开始，而支持独立的泛绿联盟的政治家则持保留意见。"
+ china_news.24.d: "随着中国大陆与台湾关系逐步改善，[TAI.GetLeader]政府同意重新加入大陆作为特别行政区，以换取保留台湾的政治和法律自治权。支持统一的泛蓝联盟的政治家发表声明，称赞此举是台湾历史上新的、更好的历史开始，而支持独立的泛绿联盟的政治家则持保留意见。"
  china_news.24.d_coup: "在台湾的亲中政变之后，新的“临时”政府已同意重新加入中华人民共和国成为特别行政区，这显然是妥协。尽管对新政府的反对已经平息，但公众对这一举动的支持还远远不够。"
  china_news.24.a: "中国内战终于结束了。"
  china_news.25.t: "中华民国政府停止运作"
@@ -1439,7 +1439,7 @@
  china_news.27.a: "这件事本可以避免。"
  china_news.28.t: "终于"
  china_news.28.d: "瓦良格号终于松了一口气，她今天终于穿过了博斯普鲁斯海峡。安卡拉与北京之间争论铁锈浮体的漫长篇章现在已经过去了！\n\n人们可能会开始怀疑，当初为什么要大惊小怪......"
- china_news.28.a: "你以为这是赌场吗？"
+ china_news.28.a: "这真的要建成赌场？"
  china_news.29.t: "汶川地震"
  china_news.29.d: "北京时间2008年5月12日，汶川地震发生。震中位于中国四川省阿坝藏族羌族自治州汶川县映秀镇附近，距四川省省会成都市西北79公里。截至2008年9月25日，地震共造成69227人死亡，17923人失踪，374643人不同程度受伤，1993.03万人失去家园，总受灾人口达4625.6万人。这是新中国成立以来破坏性最大的地震，也是继唐山地震后伤亡最惨重的地震。"
  china_news.29.a: "动员所有力量救灾！"
@@ -1480,7 +1480,7 @@
  china.58.d: "从北方的大漠到南方的海岛，无数革命者抛头颅洒热血，前仆后继继往开来。直到今天，内战终于结束，祖国实现了统一。\n\n五星红旗迎风飘扬，胜利歌声多么响亮。"
  china.58.a: "歌唱我们亲爱的祖国，从今走向繁荣富强。"
  china_focus: "中国国策树"
- china.19.a: "现在，我们合二为一了！"
+ china.19.a: "现在，我们合而为一了！"
  china.19.b: "抵抗反击！"
  china.20.b: "仍然需要更多准备。"
  china.59.t: "台湾通过第二共和国宪法"
