--- a/localisation/simp_chinese/MD_focus_IND_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_IND_l_simp_chinese.yml
@@ -168,19 +168,7 @@
  IND_maluku_crush_gangs_desc: "通过镇压城市中剩余的帮派，我们终于可以喘口气了。他们的掠夺、杀戮和破坏只会给我们的国家带来不稳定！"
  IND_maluku_all_quiet_for_now: "暂时一切安静.."
  IND_maluku_all_quiet_for_now_desc: "看来，由于我们更加严厉的努力，许多城市已经恢复了和平。 希望这能持续下去。"
- IND_coexistence_effort: "共存努力"
- IND_coexistence_effort_desc: "我们必须教导我们的人民共同生活，而不是像野蛮人一样把彼此撕成碎片，我们必须迅速寻找方法来做到这一点。"
- IND_kemdikibud: "建立教育和文化部"
- IND_kemdikibud_desc: "通过创教育和文化部，我们终于可以开始让我们的人民在没有冲突的情况下共存的过程。"
- IND_cultural_centers: "建立文化中心"
- IND_cultural_centers_desc: "我们努力创建新的文化中心可能会帮助我们的人民更多地了解彼此，他们不会发现差异，而是会发现相似之处。"
- IND_ministry_of_culture: "注资教育和文化部"
- IND_ministry_of_culture_desc: "通过向教育和文化部提供更多资金，我们可以为学生提供更好的关于印度尼西亚多种文化的教育！"
  IND_komnas_ham_desc: "举办国家人权委员会会议让我们为人权活动家和人民的社会需求提供更好的平台。"
- IND_garuntee_freedom: "保障个人自由"
- IND_garuntee_freedom_desc: "在国家人权委员会的帮助下，我们现在正在努力保护我们人民的自由。"
- IND_one_nation_many_people: "一个国家，不同的人群"
- IND_one_nation_many_people_desc: "我们是一个国家，只有一面旗帜，尽管我们存在文化差异，但我们比以往任何时候都更加团结！"
  IND_indonesian_armed_forces: "印度尼西亚武装部队"
  IND_indonesian_armed_forces_desc: "印度尼西亚武装部队是亚洲军事强国之一。从我们的地面部队到我们的飞行员，全国男女军人随时准备保卫国家免受任何和所有威胁。"
  IND_tni_ad: "印度尼西亚陆军"
@@ -908,8 +896,7 @@
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "调整§Y亚齐叛乱§! 的效果：\n组织恢复：§G+10%§!\n抵抗增长速度：§G-5%§!\n合规性：§G+5%§!\n最大工业数：§G+50%§!\n部队速度：§G+5%§!\n"
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "调整§Y亚齐叛乱§! 的效果：\n组织恢复：§G+2%§!\n抵抗增长速度：§G-5%§!\n合规性：§G+5%§!\n最大工业数：§G+15%§!\n部队速度：§G+20%§!\n"
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "调整§Y亚齐叛乱§! 的效果：\n组织恢复：§G+1%§!\n抵抗增长速度：§G-3%§!\n合规性：§G+2%§!\n最大工业数：§G+5%§!\n"
- IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§G消灭亚齐的叛乱分子！§"
- IND_quiet_now: "§Y将移除种族紧张局势或调解种族紧张局势的国家精神。为了完成此国策，您必须完成选项卡中的所有决定，具体取决于您支持哪一方§"
+ IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§G消灭亚齐的叛乱分子§!"
  IND_q: "将移除§Y种族紧张局势§!或§Y调解种族紧张局势§!\n§R要求完成种族决定§!"
  IND_sal_1: "将§Y日益激进§!替换为§Y镇压激进化§!实际变化：\n萨拉菲派每日增益：§G-1%§!\n战争支持度：§R-4%§!\n研究速度：§G+1%§!"
  IND_sal_2: "调整§Y镇压激进化§! 的效果：\n萨拉菲派每日增益：§G-1%§!\n战争支持度：§R-4%§!"
@@ -925,8 +912,6 @@
  IND_soldier: "在西爪哇创建§Y3支步兵部队§! "
  IND_soldier2: "在西星创建§Y2个机械化单位§!"
  IND_soldier3: "在西爪哇创建§Y2支特种部队§!"
- IND_est1: "将在几个月的时间内释放§Y东帝汶§!"
- IND_est2: "可能导致与东帝汶的§R战争§!\n与西方的关系将§R更糟§!！"
  indonesian_caliphate: "印度尼西亚哈里发国扩张！"
  indonesia_confront_australia_threat: "印尼就东帝汶问题威胁澳大利亚！"
  indonesia.5865.t: "灾难来临！"
