--- a/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
@@ -596,8 +596,8 @@
  UKR_increase_health_desc: "如果辩论在最高拉达§G胜出§!，法律将会§Y更改§!"
  UKR_decrease_health: "要求减少医疗保健资金"
  UKR_decrease_health_desc: "如果辩论在最高拉达§G胜出§!，法律将会§Y更改§!"
- UKR_pension_open: "开始§n养老金§!辩论"
- UKR_pension_close: "结束§n养老金§!辩论"
+ UKR_pension_open: "开始§O养老金§!辩论"
+ UKR_pension_close: "结束§O养老金§!辩论"
  UKR_increase_pension: "要求增加养老金支出"
  UKR_increase_pension_desc: "如果辩论在最高拉达§G胜出§!，法律将会§Y更改§!"
  UKR_decrease_pension: "要求减少养老金支出"
