--- a/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
@@ -1883,7 +1883,7 @@
  econ_event.21.o1: "泰勒与墨菲建筑有限公司被判有罪"
  econ_event.21.o2: "泰勒与墨菲建筑有限公司被判无罪"
  econ_event.22.t: "美国诉蓝星金属回收公司"
- econ_event.22.d: "起码从1993年12月开始，至少持续到2001年10月，具体日期美国尚不得而知，被告及其同谋者参与并发起了一项旨在通过在购买俄亥俄州东北部的有色和无色废金属的供应商中进行分配，从而压制并消除竞争的计划和共谋。这项被指控的组合行动和共谋，无理地制约了跨州贸易和商业活动，违反了谢尔曼反垄断法的第一节（15U.S.C. § 1）。"
+ econ_event.22.d: "起码从1993年12月开始，至少持续到2001年10月，具体日期美国尚不得而知，被告及其同谋者参与并发起了一项旨在通过在购买俄亥俄州东北部的有色和无色废金属的供应商中进行分配，从而压制并消除竞争的计划和共谋。这项被指控的组合行动和共谋，无理地制约了跨州贸易和商业活动，违反了谢尔曼反垄断法的第一节（15U.S.C. S1）。"
  econ_event.22.o1: "蓝星被判有罪"
  econ_event.22.o2: "蓝星被判无罪"
  econ_event.23.t: "美国诉杜安·梅纳德"
