--- a/localisation/simp_chinese/MD_traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_traits_l_simp_chinese.yml
@@ -479,3 +479,4 @@
  CAT_nuclear_reactors_research: "核反应堆研究速度"
  CAT_renewable_research: "可再生能源技术研究速度"
  CAT_fuel_oil_research: "燃料油加工技术研究速度"
+ CAT_industry_research: "工业研究速度"
