--- a/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
@@ -1187,7 +1187,7 @@
  china_news.18.d: "Após mais de meio século de tolerância, a China decidiu não tolerar a traição da Conferência de Yalta e irá tomar à força a região da Mongólia Exterior. Há pouca esperança para o futuro do governo de Ulaanbaatar na remota Ásia Interior. Como as coisas irão acontecer, ninguém sabe."
  china_news.18.a: "Exterior o quê?"
  china_news.19.t: "A Região Administrativa Especial da Mongólia Exterior é Estabelecida"
- china_news.19.d: "Após uma reação positiva na Região de Khalkha às recentes liberalizações, a liderança mongol decidiu substituir o status de \"Nação\" da Mongólia Exterior pelo de \"Região Administrativa Especial\". Essa mudança de status é acompanhada por um grande grau de reunificação."
+ china_news.19.d: "Após os movimentos recentes para aprofundar a amizade entre a Mongólia Exterior e o Continente, e após perceber que ela não pode continuar a existir sem o apoio do Continente, a fim de desenvolver melhor seu potencial, a liderança mongol decidiu substituir o status de \"Nação\" da Mongólia Exterior pelo de \"Região Administrativa Especial\". Essa mudança de status é acompanhada por um grande grau de reunificação."
  china_news.19.a: "A China está recuperando suas peças."
  china_news.20.t: "China Abandona sua Oposição à Independência de Taiwan"
  china_news.20.d: "Marcando uma mudança drástica na política, [CHI.GetLeader] disse a jornalistas que se a República da China, informalmente conhecida como Taiwan, buscasse independência, 'não nos oporíamos'. No passado, a China expressou forte oposição à perspectiva da independência de Taiwan, chegando até a ameaçar o uso da força para impedi-la. As razões para essa mudança de posicionamento por parte das autoridades chinesas permanecem incertas."
