--- a/localisation/braz_por/MD_middle_east_content_l_braz_por.yml
+++ b/localisation/braz_por/MD_middle_east_content_l_braz_por.yml
@@ -855,7 +855,7 @@
  SAU.1.d: "A visita de [LEB.GetLeader], primeiro-ministro do Líbano, à [SAU.GetNameDef] foi interrompida hoje por uma declaração bizarra emitida por ele, na qual ele anunciou sua renúncia devido à crescente influência do Irã e do Hezbollah na política libanesa. O presidente libanês, entre outras figuras políticas do país, acusou [SAU.GetNameDef] de sequestrar o primeiro-ministro e coagi-lo a emitir a declaração e apresentar sua renúncia. Posteriormente, a renúncia de [LEB.GetLeader] não foi reconhecida por seu próprio governo.\n\nEssa reviravolta coincidiu com uma linguagem beligerante por parte da [SAU.GetAdjective] em relação ao Hezbollah, com o ministro das Relações Exteriores [SAU.GetAdjective] acusando o Hezbollah de realizar atividades hostis contra a [SAU.GetNameDef]. Isso também seguiu vários meses de crescente tensão entre [SAU.GetNameDef] e [PER.GetNameDef], sendo amplamente vista como uma reação [SAU.GetAdjective] ao crescente influência do [PER.GetNameDef] no Oriente Médio."
  SAU.1.a: "Desenvolvimentos dramáticos."
  SAU_2017_Riyadh_Summit.0.t: "Cúpula de Riyadh de 2017"
- SAU_Riyadh_Summit_tt: "§Aumento da Opinião Entre Todos os Países Muçulmanos§"
+ SAU_Riyadh_Summit_tt: "§GIncreased Opinion Between All Muslim Countries§!"
  SAU_2017_Riyadh_Summit.0.d: "A Cúpula de Riyadh de 2017 é uma série de três cúpulas realizadas em 20-21 de maio de 2017 por ocasião da visita do Presidente dos Estados Unidos, Donald Trump, à Arábia Saudita, sua primeira viagem ao exterior."
  SAU_2017_Riyadh_Summit.0.a: "Realizá-la."
  SAU_2017_Riyadh_Summit.0.b: "Não é necessário."
