--- a/localisation/polish/MD_middle_east_content_l_polish.yml
+++ b/localisation/polish/MD_middle_east_content_l_polish.yml
@@ -855,7 +855,7 @@
  SAU.1.d: "Wizyta [LEB.GetLeader], premiera Libanu, w [SAU.GetNameDef] została dzisiaj przerwana przez wydane przez niego dziwaczne oświadczenie, że rezygnuje ze względu na rosnący wpływ Iranu i Hezbollahu na libańską politykę. Prezydent Libanu, wśród innych osobistości politycznych w kraju, oskarżył [SAU.GetNameDef] o porwanie premiera i zmuszenie go do wydania oświadczenia i złożenia rezygnacji. Następnie rezygnacja [LEB.GetLeader] nie została uznana przez jego własny rząd.\n\nTen obrót wydarzeń zbiegł się z wojowniczym językiem [SAU.GetAdjective] wobec Hezbollahu, kiedy minister spraw zagranicznych [SAU.GetAdjective] oskarżył Hezbollah o prowadzenie wrogich działań przeciwko [SAU.GetNameDef]. Nastąpiło to również po kilku miesiącach rosnącego napięcia między [SAU.GetNameDef] a [PER.GetNameDef] i jest powszechnie postrzegane jako reakcja [SAU.GetAdjective] na rosnące wpływy [PER.GetNameDef] na Bliskim Wschodzie."
  SAU.1.a: "Dramatyczny rozwój sytuacji."
  SAU_2017_Riyadh_Summit.0.t: "Szczyt w Riyadzie w 2017 r"
- SAU_Riyadh_Summit_tt: "§GWzrost opinii pomiędzy wszystkimi krajami muzułmańskimi§_"
+ SAU_Riyadh_Summit_tt: "§GWzrost opinii pomiędzy wszystkimi krajami muzułmańskimi§!"
  SAU_2017_Riyadh_Summit.0.d: "Szczyt w Rijadzie w 2017 r. to seria trzech szczytów, które odbyły się w dniach 20–21 maja 2017 r. z okazji wizyty prezydenta Stanów Zjednoczonych Donalda Trumpa w Arabii Saudyjskiej. Była to jego pierwsza podróż zagraniczna."
  SAU_2017_Riyadh_Summit.0.a: "Przyjmuj go."
  SAU_2017_Riyadh_Summit.0.b: "Nie ma potrzeby."
